--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -3,111 +3,75 @@
 
 
 
+img {
+
+    filter: brightness(1.25);
+    margin: 0 auto;
+
+}
+
+
+
+/*.illus {
+                margin-bottom: 500px;
+    
+                @media screen and (max-width: 810px) {
+    
+                    display: none;
+                }
+    
+            }
+    
+            .tration {
+                margin-top: 500px;
+    
+                @media screen and (max-width: 810px) {
+    
+                    display: none;
+                }
+    
+            }*/
+
+
 
 section {
-
-    .flex-center {
-
+    .fotoindex {
+        width: 100%;
+        height: 100%;
         display: flex;
-        justify-content: center;
         align-items: center;
-
-
+        justify-content: center;        
     }
-
-    #fondoindex {
-
-
-        width: 1340px;
-        height: 1000px;
-        background-image: url(https://mir-s3-cdn-cf.behance.net/project_modules/1400/a2c41194077739.5e8c608d2a6fd.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        filter: brightness(1.5);
-
-
-        h2 {
-            color: #660000d0;
-            font-size: 200px;
-            font-weight: 800;
-            font-family: 'shrimp', sans-serif;
+}
 
 
 
 
-            @media screen and (max-width: 810px) {
 
-                font-size: 60pt;
-            }
-        }
 
-        .illus {
-            margin-bottom: 500px;
 
-            @media screen and (max-width: 810px) {
+.suscripcion {
 
-                display: none;
-            }
-            
-        }
+    @extend %suscripcioncuadro;
 
-        .tration {
-            margin-top: 500px;
+}
 
-            @media screen and (max-width: 810px) {
 
-                display: none;
-            }
-            
-        }
+div {
 
+
+    marquee {
+
+        font-size: 100pt;
+        border-top: 2px #660000 solid;
+        font-family: 'shrimp', sans-serif;
 
         @media screen and (max-width: 810px) {
 
-            width: 808px;
-            height: 500px;
+            font-size: 40pt;
         }
-
-        @media screen and (max-width: 415px) {
-
-            width: 410px;
-            height: 600px;
-        }
-
-
-
-
-
 
     }
 
 
-
-
-    .suscripcion {
-
-        @extend %suscripcioncuadro;
-
-    }
-
-
-    div {
-
-
-        marquee {
-
-            font-size: 100pt;
-            border-top: 2px #660000 solid;
-            font-family: 'shrimp', sans-serif;
-
-            @media screen and (max-width: 810px) {
-
-                font-size: 40pt;
-            }
-
-        }
-
-
-    }
 }
