--- a/scss/components/_compras.scss
+++ b/scss/components/_compras.scss
@@ -6,11 +6,21 @@
 
     .tiendatext {
 
+
+        background-color: rgba(255, 255, 255, 0.274);
+        border-radius: 10%;
+        padding: 10px;
+        
+
         p {
 
-            font-family: 'Mukta Malar', sans-serif;
-            padding: 10px;
-            font-size: 20pt;
+            font-family: 'Yeseva One', sans-serif;
+            padding: 20px;
+            font-size: 16pt;
+            text-align: left;
+            
+
+
 
             @media screen and (max-width: 810px) {
 
@@ -65,20 +75,27 @@
 .mensajecons {
 
 
-    background-size: cover;
+    
     filter: opacity(90%);
-    width: 100%;
-    min-height: 120vh;
-    position: relative;
+    padding-top: 200px;
+    padding-bottom: 400px;
+    display: flex;
+    justify-content: center;
     font-family: 'Durer';
+    background-image: url(../pictures/imgconstrucc.JPG);
+    background-repeat:repeat-x;
+    background-position: center;
+    background-size: cover;
+    
 
 
     .color-overlay {
 
-        position: absolute;
-        height: 100%;
-        width: 100%;
+        
+    
         text-align: center;
+
+        
 
 
         h1 {
@@ -131,10 +148,8 @@
 
        
 
-
-
-
     }
+
 
 
 
