--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,52 +1,57 @@
 @import '../base/extend';
 
 
-
-
-img {
-
-    filter: brightness(1.25);
-    margin: 0 auto;
-
-}
-
-
-
-/*.illus {
-                margin-bottom: 500px;
-    
-                @media screen and (max-width: 810px) {
-    
-                    display: none;
-                }
-    
-            }
-    
-            .tration {
-                margin-top: 500px;
-    
-                @media screen and (max-width: 810px) {
-    
-                    display: none;
-                }
-    
-            }*/
+.fotindex {
+    background-color: #660000;
+    color: black;
+    text-shadow: 2px 2px white;
+    filter: opacity(50%);
+    background-image: url(https://mir-s3-cdn-cf.behance.net/project_modules/1400/a2c41194077739.5e8c608d2a6fd.jpg);
+    padding-top: 600px;
+    padding-bottom: 600px;
+    filter: brightness(1.35);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-blend-mode: multiply;
 
 
 
-section {
-    .fotoindex {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;        
+    h2 {
+        text-align: center;
+        font-size: 80pt;
+        background-color: #ffffff28;
+        padding-top: 60px;
+        padding-bottom: 60px;
+
+        @media screen and (max-width: 810px) {
+
+
+            font-size: 40pt;
+
+
+        }
+
+
     }
+
+    @media screen and (max-width: 810px) {
+
+        width: 800px;
+        font-size: 40pt;
+    }
+
+    @media screen and (max-width: 560px) {
+
+        width: 500px;
+        height: 100px;
+        padding-top: 300px;
+        padding-bottom: 300px;
+        background-blend-mode:normal;
+
+    }
+
+
 }
-
-
-
-
 
 
 
