--- a/scss/components/_obraproyectos.scss
+++ b/scss/components/_obraproyectos.scss
@@ -3,6 +3,18 @@
   flex-direction: column;
   text-align: center;
   margin-top: 100px;
+
+  @media screen and (max-width: 810px) {
+
+    font-size: 12pt;
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+
+  }
+
+
+
 }
 
 .obraimage {
@@ -21,17 +33,19 @@
 }
 
 .obratext {
-  background-color: white;
+  
   padding: 10px;
   flex: 50%;
   font-size: 16pt;
-  margin-top: 20px;
+  margin-top: 100px;
+  
 
   @media screen and (max-width: 810px) {
 
     font-size: 12pt;
     display: flex;
     flex-direction: column;
+    margin-top: 50px;
 
   }
 }
