--- a/scss/base/_variable.scss
+++ b/scss/base/_variable.scss
@@ -3,7 +3,7 @@
 
 
 $text-color-general: #660000;
-$header-text-size: 132pt;
+$header-text-size: 13vw;
 $footer-gradient-color: linear-gradient(180deg, rgb(250, 252, 250) 0%, rgba(102, 0, 0, 0.7091036243599003) 64%);
 $footer-font-family: 'Mukta Malar', sans-serif;   
 
