--- a/scss/components/_contacto.scss
+++ b/scss/components/_contacto.scss
@@ -4,12 +4,14 @@
 
 
     padding: 20px;
-    background-color: #660000af;
+    border: 2px solid #660000;
+    
     font-family: 'Durer';
     font-size: 20pt;
     font-weight: bold;
     color: black;
     border-radius: 2%;
+    box-shadow: 0px 3px 28px 0px rgba(0,0,0,0.75);
 
 
 
@@ -18,6 +20,19 @@
     .enviarbt {
 
         margin-bottom: 50px;
+
+
+        a {
+
+
+            font-size: 30px;
+
+
+
+
+        }
+       
+
     }
 
     h2 {
