--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -21,7 +21,7 @@ footer {
                 padding: 30px;
 
 
-        }
+            }
 
         }
 
@@ -34,17 +34,17 @@ footer {
             font-size: 14pt;
 
             @media screen and (max-width: 560px) {
-                    font-size: 8pt;
-                    padding-top: 30px;
-    
+                font-size: 12pt;
+                padding-top: 30px;
+                padding-bottom: 30px;
+                margin: 0px;
+
             }
 
         }
 
     }
 
-    @media screen and (max-width: 560px) {
-
-        height: 180px; }
+   
 
 }
