lin fix y header fix

--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -32,16 +32,15 @@ header {
 
         @media screen and (max-width: 810px) {
 
-            font-size: 80pt;
+            font-size: 60pt;
             
             
         }
 
         @media screen and (max-width: 415px) {
 
-            font-size: 50pt;
-
             height: 200px;
+            padding: 10px;
             
             
         }
