--- a/css/style.css
+++ b/css/style.css
@@ -20,13 +20,13 @@ header h1 a:hover {
 }
 @media screen and (max-width: 810px) {
   header h1 {
-    font-size: 80pt;
+    font-size: 60pt;
   }
 }
 @media screen and (max-width: 415px) {
   header h1 {
-    font-size: 50pt;
     height: 200px;
+    padding: 10px;
   }
 }
 header .navbar {
@@ -150,6 +150,7 @@ section .tiendawrapimagenes {
 @media screen and (max-width: 810px) {
   .fotindex h2 {
     font-size: 40pt;
+    background-color: rgba(255, 255, 255, 0.4392156863);
   }
 }
 @media screen and (max-width: 810px) {
