--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -35,13 +35,18 @@ footer {
 
             @media screen and (max-width: 560px) {
                 font-size: 12pt;
-                padding-top: 30px;
-                padding-bottom: 30px;
+                padding-top: 20px;
+                padding-bottom: 20px;
                 margin: 0px;
 
             }
 
         }
+
+    }
+
+    @media screen and (max-width: 560px) {
+       height: 200px;
 
     }
 
